--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html{
     height: 100%;
     overflow: hidden;
-    background: radial-gradient( #1b2735 0%, #090a07 100%);
+    background: #1b2735
 }
 
 .title {
