--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@ html{
     background: #1b2735
 }
 
+.linkTxt{
+    color: #ffffff;
+}
+.linkTxt:hover{
+    color: #363636 !important;
+}
+
 .title {
     font-size: 5.5rem;
     color: #ffffff;
